<resources>
<string name="app_name">APRSdroid Mod</string>
<string name="app_prefs">APRSdroid Preferences</string>
<string name="app_map">APRSdroid Map</string>
<string name="app_hub">APRSdroid Hub</string>
<string name="app_log">APRSdroid Log</string>
<string name="app_sta">Station Info</string>
<string name="app_messages">Messages</string>
<string name="app_messages_clear">Clear Messages</string>
<string name="wrongpasscode">Your passcode does not match your callsign!</string>
<string name="e_toolong_callsign">Your callsign is too long for Packet Radio!</string>
<string name="anon_warning">Without a passcode, your reports will not be propagated!</string>
<string name="singlelog">Send Position</string>
<string name="startlog">Start Tracking</string>
<string name="stoplog">Stop Tracking</string>
<string name="empty_logview">You have not yet sent or received any packets.\n\n
	Press the \"Menu\" button to send a single report or to start tracking your position.\n\n
	You can also change the application preferences from the menu.</string>
<string name="map_track_call">Tracking %s…</string>
<string name="map_track_unknown">Position for %s unknown!</string>
<string name="map_select">Select station</string>
<string name="sta_map">Map</string>
<string name="sta_extmap">External Map</string>
<string name="sta_aprsfi">aprs.fi</string>
<string name="sta_qrzcom">QRZ.com</string>
<string name="msg_send_new">Send message to…</string>
<string name="msg_send_hint">Type APRS message…</string>
<string name="msg_empty_list">There are no stored conversations.</string>
<string name="msg_stored_offline">The message will be sent as soon as you start tracking.</string>
<string name="msg_from">Message from %s</string>
<string name="msg_to">Message to %s</string>
<string name="msg_abort">Abort transmission</string>
<string name="msg_restart">Restart transmission</string>
<string name="delete">Delete</string>
<string name="delete_conversation">Delete Conversation</string>
<string name="delete_message">Delete Message</string>
<string name="clear_all_messages">Clear All Messages</string>
<string name="confirm_delete_messages">Are you sure you want to delete all messages with %s?</string>
<string name="confirm_clear_all_messages">Are you sure you want to delete all message history?</string>
<string name="messages_cleared">Messages cleared</string>
<string name="message_deleted">Message deleted</string>
<string name="text_copied">Copied to clipboard</string>
<string name="ic705_rx_diagnostic_summary">Inspect dual-channel connection, control logs and audio stats</string>
<string name="aprsservice">APRSdroid Service</string>
<string name="service_once">APRS Service single shot: %1$s, %2$s.</string>
<string name="service_start">APRS Service started: %1$s, %2$s.</string>
<string name="service_stop">APRS Service stopped.</string>
	<string name="notification_action_exit">Exit</string>
<string name="service_sm_no_gps">SmartBeaconing™ requires GPS!</string>
<string name="post_error">Error</string>
<string name="post_incmg">received</string>
<string name="post_info"></string>
<string name="post_connecting">Connecting to %1$s:%2$d…</string>
<plurals name="post_reconnect">
    <item quantity="one">Connection lost. Reconnect in %d second…</item>
    <item quantity="other">Connection lost. Reconnect in %d seconds…</item>
</plurals>
<string name="fr_title">Welcome to APRSdroid!</string>
<string name="fr_text">This software may only be used by licensed amateur radio
	operators!</string>
<string name="fr_text2">You need to enter your callsign to use this software.
	To forward your packets, an APRS-IS passcode is required as well.</string>
<string name="fr_text3">Only needed for APRS over the Internet:</string>
<string name="map_overlays">Overlays</string>
<string name="map_google">Google: Map</string>
<string name="map_satellite">Google: Satellite</string>
<string name="map_osm">OpenStreetMap</string>
<string name="map_amap">AutoNavi (AMap)</string>
<string name="map_custom_tile">Custom Tile Source</string>
<string name="map_objects">APRS Objects</string>
<string name="p__map">Map Settings</string>
<string name="p_map_source">Map Source</string>
<string name="p_map_source_summary">Select tile provider for online map</string>
<string name="p_map_custom_url">Custom Tile Server URL</string>
<string name="p_map_custom_url_summary">URL template with {x}, {y}, {z}, and optional {s}</string>
<string name="p_map_custom_subdomains">Tile Subdomains ({s})</string>
<string name="p_map_custom_subdomains_summary">Subdomains for load balancing, e.g. 1234 or abc</string>
<string name="age">Show last…</string>
<string name="about">About</string>
<string name="show_hub">Show Hub</string>
<string name="show_map">Show Map</string>
<string name="show_log">Show Log</string>
<string name="export_log">Export Log</string>
<string name="export_empty">Nothing to export</string>
<string name="clear_log">Clear Log</string>
<string name="preferences">Preferences</string>
<string name="profile_load">Load profile…</string>
<string name="profile_export">Export profile…</string>
<string name="p_callsign">Callsign</string>
<string name="p_callsign_nossid">Callsign (without SSID)</string>
<string name="p_callsign_summary">Your HAM radio callsign</string>
<string name="p_callsign_entry">Enter your callsign</string>
<string name="p_passcode">APRS-IS Passcode</string>
<string name="p_passcode_summary">APRS-IS validation passcode</string>
<string name="p_passcode_entry">Enter the passcode for your call</string>
<string name="p_passreq">Request Passcode</string>
<string name="p_passreq_summary">Request APRS-IS passcode online</string>
<string name="p__aprs">APRS Settings</string>
<string name="p_ssid">SSID</string>
<string name="p_ssid_summary">Station type (1..15; 9=Mobile, 10=APRS-IS)</string>
<string name="p_ssid_entry">Enter the SSID for your station</string>
<string-array name="p_ssid_e">
	<item>(none) Primary Station</item>
	<item>1: Generic additional station</item>
	<item>2: Generic additional station</item>
	<item>3: Generic additional station</item>
	<item>4: Generic additional station</item>
	<item>5: Other network (D-Star, 3G)</item>
	<item>6: Satellite</item>
	<item>7: Handheld radio</item>
	<item>8: Boat / ship</item>
	<item>9: Mobile station</item>
	<item>10: APRS-IS (no radio)</item>
	<item>11: Balloon, aircraft, spacecraft</item>
	<item>12: APRStt, DTMF, … (one way)</item>
	<item>13: Weather station</item>
	<item>14: Freight vehicle</item>
	<item>15: Generic additional station</item>
</string-array>
<string name="p_symbol">APRS symbol</string>
<string name="p_symbol_summary">Your symbol for map display</string>
<string name="p_frequency">Voice frequency</string>
<string name="p_frequency_summary">Your voice frequency [MHz]</string>
<string name="p_status">Comment field</string>
<string name="p_status_summary">The text after your coordinates</string>
<string name="p_status_entry">Enter your beacon comment</string>
<string name="p__connection">APRS Connection</string>
<string name="p_connsetup">Connection Preferences</string>
<string name="p_conn_ic705">IC-705 Wi-Fi</string>
<string name="p_link_tcpip">TCP/IP</string>
<string name="p_source_periodic">Periodic GPS/Network Position</string>
<string name="p_source_smart">SmartBeaconing™ Position</string>
<string name="p_privacy">Position privacy</string>
<string name="p_priv_ambiguity">Position Ambiguity</string>
<string name="p_priv_ambiguity_summary">Reduced precision for own position reports</string>
<string name="p_priv_spdbear">Send Speed &amp; Bearing</string>
<string name="p_priv_spdbear_summary">Include speed and bearing in position reports</string>
<string name="p_priv_altitude">Send Altitude</string>
<string name="p_priv_altitude_summary">Include altitude in position reports</string>
<string name="p_host">Server</string>
<string name="p_host_entry">Enter the APRS-IS server hostname</string>
<string name="p_host_hint">host:port</string>
<string name="p__position">Position Reports</string>
<string name="p__location">Location Settings</string>
<string name="p_sb_help">SmartBeaconing™ help</string>
<string name="p_sb_fast_speed">Fast Speed [km/h]</string>
<string name="p_sb_fast_speed_summary">Minimum speed for fast position updates</string>
<string name="p_sb_fast_rate">Fast Rate [s]</string>
<string name="p_sb_fast_rate_summary">Beacon rate at fast speed</string>
<string name="p_sb_slow_speed">Slow Speed [km/h]</string>
<string name="p_sb_slow_speed_summary">Maximum speed for slow position updates</string>
<string name="p_sb_slow_rate">Slow Rate [s]</string>
<string name="p_sb_slow_rate_summary">Beacon rate at slow speed</string>
<string name="p_corner_pegging">Corner Pegging</string>
<string name="p_cp_turn_time">Min Turn Time [s]</string>
<string name="p_cp_turn_time_summary">Minimum beacon rate when changing direction</string>
<string name="p_cp_turn_angle">Min Turn Angle [°]</string>
<string name="p_cp_turn_angle_summary">Minimum angle at high speed</string>
<string name="p_cp_turn_slope">Turn Slope</string>
<string name="p_cp_turn_slope_summary">Influence of speed on the minimum angle</string>
<string name="p_interval">Minimum update time</string>
<string name="p_interval_summary">Minutes between beacon transmissions</string>
<string name="p_interval_entry">Enter the update interval [min]</string>
<string name="p_distance">Minimum update distance</string>
<string name="p_distance_summary">Kilometers before beacon transmission (set to 0 for time-only)</string>
<string name="p_distance_entry">Enter the update distance [km]</string>
<string name="p_netloc">Use network location</string>
<string name="p_netloc_summary">Acquire position from the cellular network</string>
<string name="p_gps">GPS Precision</string>
<string name="p_gps_summary">Battery usage vs. position quality</string>
<string name="p_gps_entry">Please set the GPS Precision</string>
<string name="p_keepscreen">Keep screen awake</string>
<string name="p_keepscreen_summary">Do not turn off screen when APRSdroid is in the foreground</string>
<string name="p__display">Display and Notifications</string>
<string name="p__notification">Notifications</string>
<string name="p__notification_summary">Alert for messages and position reports</string>
<string name="p_msg">Incoming Messages</string>
<string name="p_msg_led">Blinking LED</string>
<string name="p_msg_led_on">LED notifications are on</string>
<string name="p_msg_led_off">LED notifications are off</string>
<string name="p_msg_vibr">Vibration</string>
<string name="p_msg_vibr_on">Vibration notifications are on</string>
<string name="p_msg_vibr_off">Vibration notification are off</string>
<string name="p_msg_ring">Ringtone</string>
<string name="p_msg_ring_summary">Tone for incoming messages</string>
<string name="p_pos">Own Position Reports</string>
<string name="p_pos_ring">Ringtone</string>
<string name="p_pos_ring_summary">Tone for sent position reports</string>
<string name="p_dgp">Digipeated Own Packets</string>
<string name="p_dgp_ring">Ringtone</string>
<string name="p_dgp_ring_summary">Tone for digipeated packets</string>
<string name="p_aprs_path">APRS digi path</string>
<string name="p_aprs_path_summary">Sequence of digipeaters</string>
<string name="p_aprs_path_entry">Enter the comma separated digi path</string>
<string name="p_sotimeout">TCP socket timeout</string>
<string name="p_sotimeout_summary">Time before resetting the connection</string>
<string name="p_sotimeout_entry">Timeout value in seconds (0 = disable)</string>
<string name="p_tcptnc_server_summary">KISS TCP server to contact</string>
<string name="ic705_rx_title">IC-705 Wi-Fi receive diagnostics</string>
<string name="ic705_rx_address">Radio IP address</string>
<string name="ic705_rx_port">Control UDP port</string>
<string name="ic705_rx_username">IC-705 network username</string>
<string name="ic705_rx_password">IC-705 network password</string>
</resources>