<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
	android:title="@string/p_source_periodic">

        <de.duenndns.EditTextPreferenceWithValue
                android:key="interval"
                android:icon="@drawable/ic_pref_timer"
		android:inputType="number"
		android:defaultValue="10"
		android:title="@string/p_interval"
		android:summary="@string/p_interval_summary"
		android:dialogTitle="@string/p_interval_entry" />
                
        <de.duenndns.EditTextPreferenceWithValue
                android:key="distance"
                android:icon="@drawable/ic_pref_distance"
		android:inputType="number"
		android:defaultValue="10"
		android:title="@string/p_distance"
		android:summary="@string/p_distance_summary"
		android:dialogTitle="@string/p_distance_entry" />

        <de.duenndns.ListPreferenceWithValue
                android:key="gps_activation"
                android:icon="@drawable/ic_pref_status"
		android:title="@string/p_gps"
		android:summary="@string/p_gps_summary"
                android:entries="@array/p_gps_e"
                android:entryValues="@array/p_gps_ev"
		android:defaultValue="med"
		android:dialogTitle="@string/p_gps_entry" />

        <CheckBoxPreference
                android:key="netloc"
                android:icon="@drawable/ic_pref_network"
		android:title="@string/p_netloc"
		android:summary="@string/p_netloc_summary" />

    </PreferenceCategory>
</PreferenceScreen>
