<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
	    android:title="@string/p_link_tcpip">

        <de.duenndns.EditTextPreferenceWithValue
                android:key="tcp.server"
                android:icon="@drawable/ic_pref_server"
		android:inputType="textUri"
		android:title="@string/p_host"
		android:summary="@string/p_tcptnc_server_summary"
		android:hint="@string/p_host_hint"
		android:defaultValue="china.aprs2.net"
		android:dialogTitle="@string/p_host_entry" />

	<de.duenndns.EditTextPreferenceWithValue
		android:key="tcp.sotimeout"
                android:icon="@drawable/ic_pref_status"
		android:inputType="number"
		android:title="@string/p_sotimeout"
		android:summary="@string/p_sotimeout_summary"
		android:defaultValue="120"
		android:dialogTitle="@string/p_sotimeout_entry" />

    </PreferenceCategory>

</PreferenceScreen>
