<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/p__aprs">
        <de.duenndns.EditTextPreferenceWithValue
            android:key="callsign"
            android:icon="@drawable/ic_pref_callsign"
            android:inputType="textCapCharacters"
            android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:maxLength="7"
            android:title="@string/p_callsign_nossid"
            android:summary="@string/p_callsign_summary"
            android:hint="@string/p_callsign_nossid"
            android:dialogTitle="@string/p_callsign_entry" />

        <de.duenndns.ListPreferenceWithValue
            android:key="ssid"
            android:icon="@drawable/ic_pref_ssid"
            android:title="@string/p_ssid"
            android:summary="@string/p_ssid_summary"
            android:entries="@array/p_ssid_e"
            android:entryValues="@array/p_ssid_ev"
            android:defaultValue="5"
            android:dialogTitle="@string/p_ssid_entry" />

        <de.duenndns.EditTextPreferenceWithValue
            android:key="digi_path"
            android:icon="@drawable/ic_pref_path"
            android:hint="hop1,hop2,.."
            android:defaultValue="WIDE1-1"
            android:inputType="textCapCharacters"
            android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ,-"
            android:title="@string/p_aprs_path"
            android:summary="@string/p_aprs_path_summary"
            android:dialogTitle="@string/p_aprs_path_entry" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/p__connection">
        <PreferenceScreen
            android:key="p_connsetup"
            android:icon="@drawable/ic_pref_connection"
            android:title="@string/p_connsetup">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="me.nimenhagg.aprsdroidic705mod"
                android:targetClass="org.aprsdroid.app.BackendPrefs" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/p__position">
        <PreferenceScreen
            android:key="p_symbol"
            android:icon="@drawable/ic_pref_symbol"
            android:title="@string/p_symbol"
            android:summary="@string/p_symbol_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="me.nimenhagg.aprsdroidic705mod"
                android:targetClass="org.aprsdroid.app.PrefSymbolAct" />
        </PreferenceScreen>

        <de.duenndns.EditTextPreferenceWithValue
            android:key="frequency"
            android:icon="@drawable/ic_pref_frequency"
            android:inputType="number|numberDecimal"
            android:title="@string/p_frequency"
            android:summary="@string/p_frequency_summary"
            android:dialogTitle="@string/p_frequency_summary" />

        <de.duenndns.EditTextPreferenceWithValue
            android:key="status"
            android:icon="@drawable/ic_pref_status"
            android:singleLine="true"
            android:maxLength="42"
            android:hint="@string/default_status"
            android:title="@string/p_status"
            android:defaultValue="@string/default_status"
            android:summary="@string/p_status_summary"
            android:dialogTitle="@string/p_status_entry" />

        <PreferenceScreen
            android:key="p_location"
            android:icon="@drawable/ic_pref_location"
            android:title="@string/p__location">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="me.nimenhagg.aprsdroidic705mod"
                android:targetClass="org.aprsdroid.app.LocationPrefs" />
        </PreferenceScreen>

        <PreferenceScreen
            android:key="p_privacy"
            android:icon="@drawable/ic_pref_privacy"
            android:title="@string/p_privacy"
            android:summary="@string/p_privacy_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="me.nimenhagg.aprsdroidic705mod"
                android:targetClass="org.aprsdroid.app.PrivacyPrefs" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/p__display">
        <CheckBoxPreference
            android:key="keepscreen"
            android:icon="@drawable/ic_pref_screen"
            android:title="@string/p_keepscreen"
            android:summary="@string/p_keepscreen_summary" />

        <PreferenceScreen
            android:key="p_notification"
            android:icon="@drawable/ic_pref_notification"
            android:title="@string/p__notification"
            android:summary="@string/p__notification_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="me.nimenhagg.aprsdroidic705mod"
                android:targetClass="org.aprsdroid.app.NotificationPrefs" />
        </PreferenceScreen>

        <de.duenndns.EditTextPreferenceWithValue
            android:key="google_maps_key"
            android:icon="@drawable/ic_pref_maps"
            android:title="@string/p_google_maps_key"
            android:summary="@string/p_google_maps_key_summary"
            android:dialogTitle="@string/p_google_maps_key" />

        <de.duenndns.PreferenceWithValue
            android:key="mapfile"
            android:icon="@drawable/ic_pref_maps"
            android:title="@string/p_mapfile"
            android:summary="@string/p_mapfile_summary" />

        <de.duenndns.PreferenceWithValue
            android:key="themefile"
            android:icon="@drawable/ic_pref_maps"
            android:title="@string/p_themefile"
            android:summary="@string/p_themefile_summary" />
    </PreferenceCategory>
</PreferenceScreen>
