<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
	<item android:id="@+id/age"
		android:title="@string/age"
		android:alphabeticShortcut="a"
		app:showAsAction="ifRoom"
		android:icon="@drawable/ic_action_today" />
	<item android:id="@+id/overlays"
		android:title="@string/map_overlays"
		android:alphabeticShortcut="o"
		app:showAsAction="ifRoom"
		android:icon="@drawable/ic_action_layers" >
		<menu>
			<group android:checkableBehavior="all">
				<item android:id="@+id/objects"
					android:title="@string/map_objects" />
			</group>
			<group android:id="@+id/mapmodes" android:checkableBehavior="single">
				<item android:id="@+id/amap"
					android:title="@string/map_amap" />
				<item android:id="@+id/osm"
					android:title="@string/map_osm" />
				<item android:id="@+id/normal"
					android:title="@string/map_google" />
				<item android:id="@+id/satellite"
					android:title="@string/map_satellite" />
				<item android:id="@+id/custom_tile"
					android:title="@string/map_custom_tile" />
			</group>
		</menu>
	</item>
</menu>
