<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/p_msg">
        <CheckBoxPreference
            android:key="notify_led"
            android:icon="@drawable/ic_pref_led"
            android:title="@string/p_msg_led"
            android:summaryOn="@string/p_msg_led_on"
            android:summaryOff="@string/p_msg_led_off"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="notify_vibr"
            android:icon="@drawable/ic_pref_vibrate"
            android:title="@string/p_msg_vibr"
            android:summaryOn="@string/p_msg_vibr_on"
            android:summaryOff="@string/p_msg_vibr_off"
            android:defaultValue="true" />

        <de.duenndns.RingtonePreference
            android:key="notify_ringtone"
            android:icon="@drawable/ic_pref_ringtone"
            android:title="@string/p_msg_ring"
            android:summary="@string/p_msg_ring_summary"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/p_pos">
        <CheckBoxPreference
            android:key="pos_notify_led"
            android:icon="@drawable/ic_pref_led"
            android:title="@string/p_msg_led"
            android:summaryOn="@string/p_msg_led_on"
            android:summaryOff="@string/p_msg_led_off"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="pos_notify_vibr"
            android:icon="@drawable/ic_pref_vibrate"
            android:title="@string/p_msg_vibr"
            android:summaryOn="@string/p_msg_vibr_on"
            android:summaryOff="@string/p_msg_vibr_off"
            android:defaultValue="false" />

        <de.duenndns.RingtonePreference
            android:key="pos_notify_ringtone"
            android:icon="@drawable/ic_pref_ringtone"
            android:title="@string/p_pos_ring"
            android:summary="@string/p_pos_ring_summary"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/p_dgp">
        <CheckBoxPreference
            android:key="dgp_notify_led"
            android:icon="@drawable/ic_pref_led"
            android:title="@string/p_msg_led"
            android:summaryOn="@string/p_msg_led_on"
            android:summaryOff="@string/p_msg_led_off"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="dgp_notify_vibr"
            android:icon="@drawable/ic_pref_vibrate"
            android:title="@string/p_msg_vibr"
            android:summaryOn="@string/p_msg_vibr_on"
            android:summaryOff="@string/p_msg_vibr_off"
            android:defaultValue="false" />

        <de.duenndns.RingtonePreference
            android:key="dgp_notify_ringtone"
            android:icon="@drawable/ic_pref_ringtone"
            android:title="@string/p_dgp_ring"
            android:summary="@string/p_dgp_ring_summary"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true" />
    </PreferenceCategory>
</PreferenceScreen>
