<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/p_privacy">
        <de.duenndns.ListPreferenceWithValue
            android:key="priv_ambiguity"
            android:icon="@drawable/ic_pref_privacy_blur"
            android:title="@string/p_priv_ambiguity"
            android:summary="@string/p_priv_ambiguity_summary"
            android:entries="@array/p_ambiguity_e"
            android:entryValues="@array/p_ambiguity_ev"
            android:defaultValue="0"
            android:dialogTitle="@string/p_priv_ambiguity" />

        <CheckBoxPreference
            android:key="priv_spdbear"
            android:icon="@drawable/ic_pref_privacy_speed"
            android:title="@string/p_priv_spdbear"
            android:summary="@string/p_priv_spdbear_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="priv_altitude"
            android:icon="@drawable/ic_pref_privacy_altitude"
            android:title="@string/p_priv_altitude"
            android:summary="@string/p_priv_altitude_summary"
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>
