<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<group android:id="@+id/menu_options">
	<item android:id="@+id/startstopbtn"
		android:title="@string/startlog"
		android:alphabeticShortcut="t"
		app:showAsAction="never"
		android:icon="@drawable/ic_pref_gps" />
	<item android:id="@+id/singlebtn"
		android:title="@string/singlelog"
		android:alphabeticShortcut="s"
		app:showAsAction="never"
		android:icon="@drawable/ic_pref_location" />
	<item android:id="@+id/export"
		android:title="@string/export_log"
		android:alphabeticShortcut="x"
		app:showAsAction="never"
		android:icon="@drawable/ic_pref_log" />
	<item android:id="@+id/clear"
		android:title="@string/clear_log"
		android:alphabeticShortcut="c"
		app:showAsAction="never"
		android:icon="@drawable/ic_action_clear" />
	<item android:id="@+id/preferences"
		android:title="@string/preferences"
		android:alphabeticShortcut="p"
		app:showAsAction="never"
		android:icon="@drawable/ic_pref_connection" />
	<item android:id="@+id/about"
		android:title="@string/about"
		android:alphabeticShortcut="a"
		app:showAsAction="never"
		android:icon="@drawable/ic_action_info" />
</group>
</menu>
