<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/p_conn_ic705">
        <de.duenndns.EditTextPreferenceWithValue
            android:key="ic705.address"
            android:icon="@drawable/ic_pref_network"
            android:title="@string/ic705_rx_address"
            android:dialogTitle="@string/ic705_rx_address" />
        <de.duenndns.EditTextPreferenceWithValue
            android:key="ic705.control_port"
            android:icon="@drawable/ic_pref_port"
            android:defaultValue="50001"
            android:inputType="number"
            android:title="@string/ic705_rx_port"
            android:dialogTitle="@string/ic705_rx_port" />
        <de.duenndns.EditTextPreferenceWithValue
            android:key="ic705.username"
            android:icon="@drawable/ic_pref_account"
            android:title="@string/ic705_rx_username"
            android:dialogTitle="@string/ic705_rx_username" />
        <de.duenndns.EditTextPreferenceWithValue
            android:key="ic705.password"
            android:icon="@drawable/ic_pref_password"
            android:inputType="textPassword"
            android:title="@string/ic705_rx_password"
            android:dialogTitle="@string/ic705_rx_password" />
        <Preference
            android:key="ic705_diagnostic_launch"
            android:icon="@drawable/ic_pref_ic705"
            android:title="@string/ic705_rx_title"
            android:summary="@string/ic705_rx_diagnostic_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="me.nimenhagg.aprsdroidic705mod"
                android:targetClass="org.aprsdroid.app.ic705.diagnostic.Ic705RxDiagnosticActivity" />
        </Preference>
        <Preference
            android:key="ic705.reset_defaults"
            android:icon="@drawable/ic_action_clear"
            android:title="@string/ic705_reset_defaults_title"
            android:summary="@string/ic705_reset_defaults_summary" />
    </PreferenceCategory>
</PreferenceScreen>
